# Cbeam

./: .gitignore  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md  config_generated.hpp.cmake  doxygen.hpp  version_generated.hpp.cmake
include/cbeam/: config.hpp  version.hpp
include/cbeam/concurrency/: message_manager.hpp  named_recursive_mutex.hpp  process.hpp  thread.hpp  threaded_object.hpp
include/cbeam/container/: buffer.hpp  circular_buffer.hpp  find.hpp  nested_map.hpp  shared_array.hpp  stable_interprocess_container.hpp  stable_interprocess_map.hpp  stable_reference_buffer.hpp  thread_safe_container.hpp  thread_safe_map.hpp  thread_safe_set.hpp  xpod.hpp
include/cbeam/convert/: buffer.hpp  map.hpp  nested_map.hpp  string.hpp  xpod.hpp
include/cbeam/encoding/: utf8.hpp
include/cbeam/error/: bad_alloc.hpp  base_error.hpp  logic_error.hpp  out_of_range.hpp  overflow_error.hpp  runtime_error.hpp  system_error.hpp
include/cbeam/filesystem/: io.hpp  path.hpp  stdout_redirector.hpp
include/cbeam/json/: map.hpp  nested_map.hpp  string.hpp  traits.hpp
include/cbeam/lifecycle/: item_registry.hpp  scoped_set.hpp  singleton.hpp
include/cbeam/logging/: log_manager.hpp  logger.hpp
include/cbeam/logging/detail/: logging_impl.hpp
include/cbeam/memory/: interprocess_shared_memory.hpp  pointer.hpp
include/cbeam/platform/: clock_precision.hpp  com_initializer.hpp  compiler_compatibility.hpp  info.hpp  runtime.hpp  system_folders.hpp  windows_config.hpp
include/cbeam/random/: generators.hpp
include/cbeam/serialization/: direct.hpp  map.hpp  nested_map.hpp  string.hpp  traits.hpp  xpod.hpp
test/: test_buffer.cpp  test_circular_buffer.cpp  test_com_initializer.cpp  test_convert.cpp  test_convert_map.cpp  test_convert_nested_map.cpp  test_encoding.cpp  test_item_registry.cpp  test_json.cpp  test_map_serialization.cpp  test_message_manager.cpp  test_nested_map_serialization.cpp  test_path.cpp  test_serialize.cpp  test_serialize_nested_map_xpod.cpp  test_singleton.cpp  test_stable_interprocess_map.cpp  test_stable_reference_buffer.cpp  test_thread_safe_map.cpp  test_threaded_object.cpp
